# Automated-batch-pipeline

./: .gitignore  generate_banking_data.py  pyproject.toml
models/: tables.py
