[project]
name = "automated-batch-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "apache-airflow>=3.1.8",
    "faker>=40.12.0",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "sqlalchemy>=2.0.48",
]
